2009-01-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/CaretMoveActions.cs: Encapsulated virtual space
	management.

2009-01-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Worked on line changed markers.

2009-01-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/CaretMoveActions.cs:
	* Mono.TextEditor/ClipboardActions.cs: Added support for caret behind
	eol

2009-01-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: worked on line changed markers.

2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSplitter.cs: Worked on line changed markers.

2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Optimized line changed markers a bit.

2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Added line dirty/changed
	markers.

2009-01-28  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: fixed 'Bug 469928 -
	Text editor in assembly browser hung randomly'.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.mdp: treat warnings as errors.

2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* SyntaxModes/XmlSyntaxMode.xml: fixed "Bug 469628 - XML attribute
	highlighting broken"

2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Remove debug code.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* Mono.TextEditor.mdp: Flush project format changes.
