@@ -1,3 +1,10 @@
+2009-01-30  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/Caret.cs:
+	* Mono.TextEditor/TextViewMargin.cs:
+	* Mono.TextEditor/CaretMoveActions.cs: Added click support for caret
+	beyond eol.
+
 2009-01-29  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextEditorData.cs:
